--- a/style.css
+++ b/style.css
@@ -141,9 +141,10 @@ header h2 {
     display: flex;
 }
 
-article {
+article, article a {
     flex: 3;
-    margin-right: 20px;
+    margin-right: 0.px;
+    text-decoration: none;
 }
 
 /* Cards */
